src/objects/Opportunity_Code__c.object
<CustomObject>
    <fields>
        <fullName>Allocated_to_Project__c</fullName>
        <label>% Allocated to Project</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Amount_Allocated__c</fullName>
        <formula>Opportunity__r.Amount * Allocated_to_Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Codes</relationshipLabel>
        <relationshipName>Opportunity_Codes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Opportunity Codes</relationshipLabel>
        <relationshipName>Opportunity_Codes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Opportunity Code</label>
    <nameField>
        <displayFormat>Code-{00000}</displayFormat>
        <label>Opportunity Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>